# universal-data-loader

./: .dockerignore  .env.example  .gitignore  CONTAINER_README.md  DEPLOYMENT_SUMMARY.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  STANDARD_INTEGRATION.md  api_server.py  client_example.py  docker-compose.yml  example_llm_app.py  openapi.yaml  pyproject.toml  setup.py  test-app.py  test_container.py  uloader.py  universal_loader_connector.py
app/: main.py
app/api/models/: requests.py  responses.py
app/api/routes/: batch.py  documents.py  health.py  jobs.py
app/core/: loader.py  security.py  utils.py
app/services/: document_service.py  job_service.py
client/python/: universal_loader_connector.py
config/: documents.json.template  settings.py
config/environments/: development.yml  production.yml
config/templates/: documents.json.template  rag_knowledge.json.template  training_data.json.template
development_cycle/1_planning/: STAGE_GATE_PROMPT_PLAN.md  feature_spec.md
development_cycle/3_completed/: STAGE_GATE_PROMPT_COMPL.md
development_cycle/3_completed/azure_speech_to_text_integration/: README.md  (+3 more)
development_cycle/4_archived/: azure_speech_to_text_feature.md  transcription_evaluation_feature.md
development_cycle/_reference/: python.md  python_coding_style.md
docs/deployment/: CONTAINER_README.md  DEVOPS_DEPLOYMENT_GUIDE.md
docs/integration/: INTEGRATION_GUIDE.md  STANDARD_INTEGRATION.md
examples/: basic_usage.py  batch_processing_examples.py  cli_demo.py  config_examples.py  directory_processing.py  langchain_integration.py
examples/app_configs/: document_analysis.json.example  rag_setup.json.example  training_data.json.example  website_crawler.json.example
examples/basic_usage/: basic_usage.py
examples/rag_integration/: example_llm_app.py  langchain_integration.py
infrastructure/docker/: Dockerfile  nginx.conf
infrastructure/scripts/: deploy.sh
monitoring/health/: checks.py
monitoring/logging/: config.py
tests/: conftest.py
universal_loader/: __init__.py  batch_config.py  batch_processor.py  cli.py  config.py  document.py  loader.py  utils.py
(+8 files in other folders)
